  if a good name is scraped, the name is set.  For balances, if a good number is scraped, the balance
  is set, or if "allin" or its variants are scraped, balance is set to zero.  (OpenHoldem)
  
- Userchair identification now requires 2 action buttons to be present (previously, only one needed to
  be present).  (OpenHoldem)
  
  
v1.8.1 2008-04-11
NEW STUFF:
- Show wait cursor when parsing f$debug (jumpingfences)

- New symbol s$activemethod is now available.  This is used to determine how OH treats
  information from the pXactive and uXactive regions.
  - 1: (default, legacy) Inactive unless pXactive/uXactive returns true/active
  - 2: (new) Active unless pXactive/Uxactive returns false/inactive/out/away  (Thanks,
    Nick Coldhand)  (quiqsilver)

- When using ManualMode, the new "Network" option now available in the ManualMode interface
  is now used as the network for Poker Tracker data.  This means s$sitename and s$network in
  the ManualMode table map are no longer used for Poker Tracker.  (Thanks, Winngy)
  (quiqsilver)
  
- New dll message phl1k introduced to pass address of OH handlists (Matrix)  

- Added memory symbols from SM's DLL (OpenHoldem)
	Memory symbols
	---------
	me_st_abc_123_45 - 'me_st_' stores a value "123.45" in variable "abc" 
	   (use "_" for the decimal in values)
	   (a function name can also be passed in, instead of a number, for example:
		'me_st_def_f$myfunc' would store the results of function f$myfunc in variable def)
	me_re_abc - 'me_re_' retrieves the value from variable "abc"
	
	Note to testers:  In order to make this work, I had to slightly alter the grammar definition,
	   Specifically, the definition of a SYMBOL was changed from:
	     SYMBOL			 = leaf_node_d[ lexeme_d[ ((alpha_p | '_' | '$') >> *(alnum_p | '_' | '$')) ] ];
	   to:
		 SYMBOL			 = leaf_node_d[ lexeme_d[ ((alpha_p | '_' | '$') >> *(alnum_p | '_' | '$' | '.')) ] ];
